# Algorithm

./: README.md
C++/: AVL-Tree.cpp  B-tree.cpp  RBTree.cpp  Trie.cpp  fibheap.cpp
C++/Cmake/cmake0/: Makefile  header.h  main  pipes.c  write_pipe.c
C++/Cmake/cmake1/: CMakeLists.txt  threads.c  threads.h
C++/Cmake/cmake2/: CMakeLists.txt
C++/Cmake/cmake2/dynamic/: CMakeLists.txt
C++/Cmake/cmake2/static/: CMakeLists.txt
C++/HardList/: CMakeLists.txt  func.c  header.h  main.c  out
C++/course_work/: CMakeLists.txt  header.h  main.c  main_func.c  other_func.c  out  trash
C++/course_work/b/: CMakeCache.txt  Makefile  cmake_install.cmake  main
C++/group proj/: CMakeLists.txt  heap_sort_f.c  main.c  other_func.c  shaker_sort.c  simple_include_sort.c  sort.h
C++/group proj/bl/: CMakeCache.txt  Makefile  cmake_install.cmake  main
С/: BST.c  Dijkstra's algorithm.c  counnting_sort.c  hash_table.c  merge_sort.c
